# ROS-Basics

./: CMakeLists.txt  README.md  package.xml
launch/: example.launch  image_pub_sub.launch  reverse.launch
opencv/: ball_detection.py  ball_tracking.py  color_filtering.py  contours_processing.py
src/: hello.cpp  image_pub_sub.cpp  publevel_toggle.cpp  random_vel.cpp  reverse_cmd_vel.cpp  spawn_turtle.cpp  subscriber.cpp
src/scripts/: contours_detection.py  contours_processing.py  image_pub_sub.py
